# pytorch_deep_learning

./: README.md  basics.ipynb  pyproject.toml  requirements.txt  xor_model.pth
nn/: __init__.py
nn/xor_classifier/: __init__.py  xor.md  xor.py
runs/xor_classifier/: events.out.tfevents.1763150036.Jimmys-Mac-mini.local.73031.0
runs/xor_classifier/1763150037.37844/: events.out.tfevents.1763150037.Jimmys-Mac-mini.local.73031.1
