[project]
name = "pytorch-deep-learning"
version = "0.1.0"
description = "PyTorch deep learning projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "matplotlib-inline>=0.1.0",
    "seaborn>=0.12.0",
    "tqdm>=4.64.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
xor = "nn.xor_classifier.xor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nn"]
